<resources>
    <string name="app_name">Mesdakya</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">البريد الالكترونى </string>
    <string name="prompt_phone">رقم الهاتف  </string>
    <string name="prompt_password">كلمه المرور </string>
    <string name="confirm_password"> تأكيد كلمه المرور </string>
    <string name="action_sign_in">تسجيل الدخول </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="forget_password">هل نسيت كلمه المرور !</string>
    <string name="sign_up2">انشاء حساب جديد</string>
    <string name="sign_up1">ليس لديك حساب !</string>
    <string name="first_name">الاسم الاول </string>
    <string name="last_name">الاسم الاخير </string>
    <string name="wallet">محفظتى </string>
    <string name="wallet2">الحقيبة </string>
    <string name="seller">مزاداتى  </string>
    <string name="edit_profile">تعديل الملف الشخصى  </string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_client_main">ClientMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_seller_main">SellerMainActivity</string>

    <string name="fail">فشل</string>
    <string name="no_internet">لا يوجد اتصال بالانترنت</string>
    <string name="exit">خروج</string>
    <string name="are_you_sure_to_exit">هل انت متاكد من الخروج!</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="please_wait">من فضلك انتظر......</string>
    <string name="wait">انتظر ...</string>
    <string name="empty_email">البريد الالكتروني فارغ</string>
    <string name="invalid_email">البريد الالكتروني غير صحيح</string>
    <string name="empty_password">كلمه المرور فارغه</string>
    <string name="not_equal_password">كلمه المرور غير مطابقه</string>
    <string name="empty_name">الاسم فارغ</string>
    <string name="items">العناصر</string>
    <string name="back">رجوع</string>
    <string name="done">تم</string>
    <string name="search_here">ابحث هنا</string>
    <string name="departement">الاقسام</string>
    <string name="mzadat">المزادات</string>
    <string name="seller_name">اسم البائع :</string>
    <string name="price">السعر : </string>
    <string name="mzad_type">نوع المزاد :</string>
    <string name="model_name"> نوع المودل :</string>
    <string name="color">اللون :</string>
    <string name="year">السنه :</string>
    <string name="location">الموقع</string>
    <string name="date">التاريخ</string>
    <string name="bidding">مزايده</string>
    <string name="direct_buy">شراء مباشر</string>
    <string name="email_address">البريد الالكتروني</string>
    <string name="password">الرقم السري</string>
    <string name="login">تسجيل الدخول</string>
    <string name="sign_up">انشاء حساب جديد ؟</string>
    <string name="google">google</string>
    <string name="misdaqia">مصداقيه</string>
    <string name="name">الاسم</string>
    <string name="account_created">تمت العمليه بنجاح</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_home">Home</string>
    <string name="myaccount">My Account</string>
    <string name="satchel">Satchel</string>
    <string name="myauctions">My auctions</string>
    <string name="instantauction">Add an instant auction</string>
    <string name="openauction">Add an open auction</string>
    <string name="auctionprice">Add Auction Price</string>
    <string name="wallett">Wallet</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>

    <string name="amount">Amount</string>
    <string name="card_number">Card Number</string>
    <string name="card_expire_date">Card Expiration Date</string>
    <string name="card_expire_year">Card Expiration Year</string>
    <string name="card_cvv">Card Cvv</string>

    <string name="visa">Visa</string>
    <string name="master">Master</string>
    <string name="payment">Payment</string>

    <string name="card_number_empty">Please Enter Card Number</string>
    <string name="card_number_error">Card Number Contains 16 numbers</string>

    <string name="choose">Choose</string>
    <string name="invalid_date">InCorrect Date</string>

    <string name="choose_month">Please Choose Month</string>
    <string name="choose_year">Please Choose Year</string>

    <string name="choose_card_type">Please Choose Card Type</string>
    <string name="card_type">Card Type</string>
    <string name="card_cvv_empty">Please Enter Card Cvv</string>
    <string name="card_cvv_error">Card Cvv Contains 3 numbers</string>

    <string name="email_or_pass_invalid">من فضلك التاكد من البريد الالكتروني او الرقم السري</string>
</resources>
