<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"

    tools:context=".View.login.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.example.misdaqia.Helper.HeaderFontTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="Misdaqia"
            android:textColor="#fff"
            android:textSize="30dp"
            android:textStyle="bold" />


        <com.example.misdaqia.Helper.MainFontEdittext
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/back_edit"
            android:ems="10"
            android:textAllCaps="false"
            android:gravity="center"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingTop="9dp"
            android:maxLines="1"
            android:paddingBottom="9dp"
            android:textColor="#000" />


        <com.example.misdaqia.Helper.MainFontEdittext
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/back_edit"
            android:ems="10"
            android:textAllCaps="false"
            android:maxLines="1"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:textColor="#000" />


        <com.example.misdaqia.Helper.MainFontButton
            android:id="@+id/btnlogin"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:background="@drawable/button_orange"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="12sp" />


        <com.example.misdaqia.Helper.MainFontTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:onClick="goSignup"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:textStyle="bold" />

        <com.example.misdaqia.Helper.MainFontTextview
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/google"
            android:textColor="#fff"
            android:textSize="16dp"
            android:textAllCaps="false"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>
