<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/back"
    tools:context=".View.SignUpActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <include layout="@layout/public_toolbar"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_below="@id/toolbar"
            android:id="@+id/profile_profile_image"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/placeperson" />


        <LinearLayout
            android:layout_below="@+id/profile_profile_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        <com.example.misdaqia.Helper.MainFontEdittext
            android:id="@+id/edtname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/back_edit"
            android:gravity="center"
            android:textAllCaps="false"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="25dp"
            android:paddingTop="9dp"
            android:paddingRight="25dp"
            android:paddingBottom="9dp"

            android:singleLine="true" />

        <!--<com.example.misdaqia.Helper.MainFontEdittext-->
            <!--android:id="@+id/edtusername"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="40dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginRight="40dp"-->
            <!--android:background="@drawable/back_edit"-->
            <!--android:gravity="center"-->
            <!--android:hint="اسم المستخدم"-->
            <!--android:inputType="text"-->
            <!--android:maxLines="1"-->
            <!--android:paddingLeft="25dp"-->
            <!--android:paddingTop="9dp"-->
            <!--android:paddingRight="25dp"-->
            <!--android:paddingBottom="9dp"-->
            <!--android:singleLine="true" />-->


        <com.example.misdaqia.Helper.MainFontEdittext
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_edit"
            android:gravity="center"
            android:hint="@string/email_address"
            android:textAllCaps="false"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="25dp"
            android:paddingTop="9dp"
            android:paddingRight="25dp"
            android:paddingBottom="9dp"
            android:singleLine="true" />

        <com.example.misdaqia.Helper.MainFontEdittext
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:background="@drawable/back_edit"
            android:gravity="center"
            android:hint="@string/password"
            android:textAllCaps="false"
            android:inputType="textWebPassword"
            android:maxLines="1"
            android:paddingLeft="25dp"
            android:paddingTop="9dp"
            android:paddingRight="25dp"
            android:paddingBottom="9dp"
            android:singleLine="true" />


        <com.example.misdaqia.Helper.MainFontEdittext
            android:id="@+id/edtverifiedpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/back_edit"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textWebPassword"
            android:maxLines="1"
            android:textAllCaps="false"
            android:paddingLeft="25dp"
            android:paddingTop="9dp"
            android:paddingRight="25dp"
            android:paddingBottom="9dp"
            android:singleLine="true" />


        <com.example.misdaqia.Helper.MainFontButton
            android:id="@+id/signBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:textSize="12dp"
            android:background="@drawable/button_orange"
            android:text="@string/sign_up2"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>


