<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_container"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    android:weightSum="2"
    android:background="@drawable/back"
    tools:context=".View.Profile">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:id="@+id/info_lay">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_profile_image"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/placeperson" />

        <com.example.misdaqia.Helper.HeaderFontTextview
            android:id="@+id/profile_txt_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_profile_image"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="8sp"
            android:text=" user name "
            android:textColor="#26a4ef"
            android:textSize="23sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_lay"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center">
        <com.example.misdaqia.Helper.MainFontButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seller"
            android:text="@string/seller"
            android:background="@drawable/button_sign"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"

            />
        <com.example.misdaqia.Helper.MainFontButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wallet2"
            android:background="@drawable/button_sign"
            android:text="@string/wallet"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"

            />
        <com.example.misdaqia.Helper.MainFontButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_profile"
            android:textSize="15dp"
            android:background="@drawable/button_sign"
            android:textColor="@color/white"
            android:text="@string/edit_profile"

            />
    </LinearLayout>
</LinearLayout>